# dICP

./: LICENSE  README.md  environment.yml  setup.cfg
.github/workflows/: pytest.yml
config/: dICP_config.yaml
dICP/: ICP.py  diff_nn.py  loss.py  nn.py  visualization.py
diff_ICP/: ICP.py  diff_nn.py  kd_nn.py
tests/: points_map.npy  points_scan.npy  test_ICP.py  test_ICP_inputs.py  test_kd_nn.py  test_nn.py  test_ptp_ICP.py
tests/data/: points_scan.npy
