[metadata]
name = dICP
version = 0.0.1
authors = [
    {name = "Jane Doe", email = "jane.doe@example.com" },]
description = Sample python repository for robotics research
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/olamarre/hello-python.git"

[options]
packages = find:

[options.packages.find] # do not mistake tests/ for a package directory
exclude=tests*