[metadata]
name = dICP
version = 0.0.1
authors = [
    {name = "Daniil Lisus", email = "daniil.lisus@robotics.utias.utoronto.ca" },]
description = Differentiable ICP library
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/lisusdaniil/dICP"

[options]
packages = find:

[options.packages.find] # do not mistake tests/ for a package directory
exclude=tests*